--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>your code goes here</h1>
+    <main>
+      <div class="container">
+        <h1>Counter</h1>
+        <div id="value">0</div>
+        <button class="btn" id="decrease">decrease</button>
+        <button class="btn" id="reset">reset</button>
+        <button class="btn" id="increase">increase</button>
+      </div>
+    </main>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
